Use instanceof-pattern
Exclude org.eclipse.jdt.ls.core.internal.corext